# SkyePhyX

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  imgui.ini  main.cpp
Shaders/: debug_frag.wgsl  debug_vert.wgsl  line_frag.wgsl  line_vert.wgsl  shader_frag.wgsl  shader_vert.wgsl
src/: GameManager.cpp  GameManager.hpp  constants.hpp  levels.h
src/helpers/: camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  geometryGenerator.hpp  math.cpp  math.hpp
src/physics/: collision.cpp  collision.hpp  energy.cpp  energy.hpp  force.cpp  force.hpp  joint.cpp  manifold.cpp  neohookeanfem.cpp  solver.cpp  solver.hpp  spring.cpp  stvkfem.cpp
src/rendering/: RenderEngine.cpp  RenderEngine.hpp
src/utils/: wgpuBundle.cpp  wgpuBundle.hpp  wgpuHelpers.cpp
